client/local/logs/project.log
2020-04-16T03:21:32.460Z - normal: Load ~/.CocosCreator/settings.json
2020-04-16T03:21:32.536Z - normal: Initializing Asset Database
2020-04-16T03:21:32.549Z - normal: checking language setting...
2020-04-16T03:21:32.549Z - normal: Language: zh
2020-04-16T03:21:33.748Z - success: preview server running at http://localhost:7456
2020-04-16T03:21:33.751Z - success: protocol editor-framework registered
2020-04-16T03:21:33.751Z - success: protocol app registered
2020-04-16T03:21:33.751Z - success: protocol theme registered
2020-04-16T03:21:33.751Z - success: protocol packages registered
2020-04-16T03:21:33.751Z - success: protocol uuid registerred
2020-04-16T03:21:33.752Z - success: protocol db registerred
2020-04-16T03:21:33.752Z - success: protocol thumbnail registerred
2020-04-16T03:21:33.752Z - success: protocol unpack registerred
2020-04-16T03:21:33.752Z - success: protocol disable-commonjs registerred
2020-04-16T03:21:33.898Z - normal: connected!
2020-04-16T03:21:33.899Z - normal: Check project C:\Users\EDZ\Desktop\MRFit
2020-04-16T03:21:33.901Z - normal: Initializing project C:\Users\EDZ\Desktop\MRFit
2020-04-16T03:21:34.007Z - success: adapters loaded
2020-04-16T03:21:34.020Z - success: asset-db-debugger loaded
2020-04-16T03:21:34.138Z - success: fb-audience-network loaded
2020-04-16T03:21:34.208Z - success: fb-live-stream loaded
2020-04-16T03:21:34.242Z - success: google-play-instant loaded
2020-04-16T03:21:34.302Z - success: huawei-runtime loaded
2020-04-16T03:21:34.309Z - success: jkw-adapter loaded
2020-04-16T03:21:34.315Z - success: jsb-adapter loaded
2020-04-16T03:21:34.347Z - success: oppo-runtime loaded
2020-04-16T03:21:34.370Z - success: package-manager loaded
2020-04-16T03:21:34.377Z - success: qtt-adapter loaded
2020-04-16T03:21:34.400Z - success: runtime-dev-tools loaded
2020-04-16T03:21:34.427Z - success: sdkbox loaded
2020-04-16T03:21:34.440Z - success: ui-kit-preview-extra loaded
2020-04-16T03:21:34.451Z - success: ui-kit-preview loaded
2020-04-16T03:21:34.521Z - success: vivo-runtime loaded
2020-04-16T03:21:34.524Z - success: alipay-minigame loaded
2020-04-16T03:21:34.575Z - success: assets loaded
2020-04-16T03:21:34.578Z - success: baidugame-opendata loaded
2020-04-16T03:21:34.580Z - success: baidugame loaded
2020-04-16T03:21:34.594Z - success: builder loaded
2020-04-16T03:21:34.904Z - success: cocos-services loaded
2020-04-16T03:21:34.909Z - success: console loaded
2020-04-16T03:21:34.918Z - success: fb-instant-games loaded
2020-04-16T03:21:34.920Z - success: game-window loaded
2020-04-16T03:21:34.921Z - success: google-instant-games loaded
2020-04-16T03:21:34.925Z - success: hierarchy loaded
2020-04-16T03:21:34.927Z - success: inspector loaded
2020-04-16T03:21:35.962Z - success: cpk-publish loaded
2020-04-16T03:21:35.967Z - success: keystore loaded
2020-04-16T03:21:35.988Z - success: node-library loaded
2020-04-16T03:21:35.991Z - success: open-recent-items loaded
2020-04-16T03:21:35.993Z - success: package-asset loaded
2020-04-16T03:21:35.996Z - success: preferences loaded
2020-04-16T03:21:35.997Z - success: project-exporter loaded
2020-04-16T03:21:35.999Z - success: project-importer loaded
2020-04-16T03:21:36.000Z - success: project-settings loaded
2020-04-16T03:21:36.013Z - success: qtt-runtime loaded
2020-04-16T03:21:36.015Z - success: scene loaded
2020-04-16T03:21:36.017Z - success: simulator-debugger loaded
2020-04-16T03:21:36.017Z - success: sprite-editor loaded
2020-04-16T03:21:36.019Z - success: store loaded
2020-04-16T03:21:36.021Z - success: timeline loaded
2020-04-16T03:21:36.025Z - success: wechatgame-opendata loaded
2020-04-16T03:21:36.029Z - success: wechatgame loaded
2020-04-16T03:21:36.032Z - success: xiaomi-runtime loaded
2020-04-16T03:21:36.881Z - normal: Initializing Cocos2d
2020-04-16T03:21:39.684Z - normal: Initializing engine extends
2020-04-16T03:21:40.903Z - info: Cocos Service load base data!
2020-04-16T03:21:43.465Z - normal: Loading packages
2020-04-16T03:21:43.476Z - normal: Watching packages
2020-04-16T03:21:44.088Z - normal: Run Application
2020-04-16T07:00:56.700Z - failed: [db-task][sync-changes] Failed to import asset C:\Users\EDZ\Desktop\MRFit\assets\script\shop\main.js, message: Compile error: SyntaxError: C:/Users/EDZ/Desktop/MRFit/assets/script/shop/main.js: Unexpected token (39:38)
  37 |             if(rsp.code == 200)
  38 |             {
> 39 |                 global.clientAttrData.(rsp);
     |                                       ^
  40 |             }
  41 |             else
  42 |             {
    at Parser.pp$5.raise (E:\CocosCreator_2.2.2\resources\app.asar\node_modules\babylon\lib\index.js:4454:13)
    at Parser.pp.unexpected (E:\CocosCreator_2.2.2\resources\app.asar\node_modules\babylon\lib\index.js:1761:8)
    at Parser.pp$3.parseIdentifier (E:\CocosCreator_2.2.2\resources\app.asar\node_modules\babylon\lib\index.js:4332:10)
    at Parser.pp$3.parseSubscripts (E:\CocosCreator_2.2.2\resources\app.asar\node_modules\babylon\lib\index.js:3517:30)
    at Parser.pp$3.parseExprSubscripts (E:\CocosCreator_2.2.2\resources\app.asar\node_modules\babylon\lib\index.js:3504:15)
    at Parser.pp$3.parseMaybeUnary (E:\CocosCreator_2.2.2\resources\app.asar\node_modules\babylon\lib\index.js:3474:19)
    at Parser.pp$3.parseExprOps (E:\CocosCreator_2.2.2\resources\app.asar\node_modules\babylon\lib\index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (E:\CocosCreator_2.2.2\resources\app.asar\node_modules\babylon\lib\index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (E:\CocosCreator_2.2.2\resources\app.asar\node_modules\babylon\lib\index.js:3344:19)
    at Parser.pp$3.parseExpression (E:\CocosCreator_2.2.2\resources\app.asar\node_modules\babylon\lib\index.js:3306:19)
2020-04-16T10:16:29.320Z - info: 只有预制节点 "item" 及其子节点会被保存。
2020-04-16T10:17:52.957Z - info: 只有预制节点 "item" 及其子节点会被保存。
2020-04-16T10:18:05.420Z - info: 只有预制节点 "item" 及其子节点会被保存。
2020-04-16T10:19:44.525Z - info: 只有预制节点 "item" 及其子节点会被保存。
2020-04-16T10:20:05.477Z - info: 只有预制节点 "item" 及其子节点会被保存。
2020-04-16T10:21:30.381Z - info: 只有预制节点 "item" 及其子节点会被保存。
2020-04-16T10:22:55.557Z - info: 只有预制节点 "item" 及其子节点会被保存。
2020-04-16T10:26:02.143Z - info: 只有预制节点 "item" 及其子节点会被保存。
2020-04-16T10:27:06.765Z - info: 只有预制节点 "item" 及其子节点会被保存。
2020-04-16T10:30:14.957Z - info: 只有预制节点 "item" 及其子节点会被保存。
2020-04-16T10:31:06.211Z - info: 只有预制节点 "item" 及其子节点会被保存。
2020-04-16T10:31:29.693Z - info: 只有预制节点 "item" 及其子节点会被保存。
2020-04-16T10:31:58.342Z - info: 只有预制节点 "item" 及其子节点会被保存。
2020-04-16T10:32:03.285Z - info: 只有预制节点 "item" 及其子节点会被保存。
2020-04-16T10:33:40.453Z - info: 只有预制节点 "item" 及其子节点会被保存。
